--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-#root{
-  @apply h-screen w-screen bg-slate-300
+body{
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+
+
+:root {
+  font-family: poppins;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
