--- a/src/components/hero-sec/herosec.css
+++ b/src/components/hero-sec/herosec.css
@@ -14,13 +14,16 @@
     @apply text-7xl text-white font-extrabold my-6
 }
 .hero-data-btn-cont{
-    @apply w-2/5 flex justify-between my-6
+    @apply w-2/5 flex justify-between items-center my-6
 }
 .hero-data-btn-text{
-    @apply text-2xl text-white font-semibold
+    @apply text-2xl text-white font-semibold 
 }
 .hero-data-btn{
-    @apply text-2xl text-white font-semibold
+    @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-light to-purple-dark px-7 py-2 rounded-md
+}
+.hero-data-btn:hover{
+    @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-dark to-purple-light px-7 py-2 rounded-md
 }
 .hero-img{
 
