--- a/src/components/hero-sec/herosec.css
+++ b/src/components/hero-sec/herosec.css
@@ -20,10 +20,10 @@
     @apply text-2xl text-white font-semibold 
 }
 .hero-data-btn{
-    @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-light to-purple-dark px-7 py-2 rounded-md
+    @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-medium to-purple-dark px-7 py-2 rounded-md
 }
 .hero-data-btn:hover{
-    @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-dark to-purple-light px-7 py-2 rounded-md
+    @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-dark to-purple-medium px-7 py-2 rounded-md
 }
 .hero-img{
 
