--- a/src/components/features-sec/features.css
+++ b/src/components/features-sec/features.css
@@ -20,8 +20,38 @@
     @apply text-white text-center text-4xl font-extrabold leading-[3rem] w-1/3 z-20
 }
 .feature-card-cd{
-    @apply bg-brown-dark w-52 h-52 rounded-full absolute bottom-[-3.5rem] left-[-30px]
+    @apply bg-brown-dark w-52 h-52 rounded-full absolute transition-transform; 
+    transition:1s
+}
+.feature-card-cd-pos1{
+    @apply bottom-[-3.5rem] left-[-30px];
+}
+.feature-card-cd-pos2{
+    @apply top-[-3.5rem] right-[-30px];
 }
 .feature-card-cl{
-    @apply bg-brown-light w-36 h-36 rounded-full absolute top-[-3.5rem] right-[-2rem]
+    @apply bg-brown-light w-36 h-36 rounded-full absolute;
+    transition: 1s;
+}
+.feature-card-cl-pos1{
+    @apply top-[-3.5rem] right-[-2rem];
+}
+.feature-card-cl-pos2{
+    @apply bottom-[-3.5rem] left-[-2rem];
+}
+.feature-card-data{
+    @apply text-xl font-normal text-white w-4/5 text-center z-30 ;
+}
+
+/* animations */
+
+@keyframes translate-big-c{
+    from{
+        bottom:-3.5rem;
+        left:-30px;
+    }
+    to{
+        top:-3.5rem;
+        right:-2rem;
+    }
 }
