--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 .app{
-  @apply flex justify-center items-center h-full bg-footerBG;
+  @apply w-screen flex justify-center items-center h-full bg-footerBG;
 }
