--- a/src/components/tokenomics-sec/tokenomics.css
+++ b/src/components/tokenomics-sec/tokenomics.css
@@ -2,15 +2,40 @@
     @apply w-screen flex flex-col items-center bg-footerBG pt-10 pb-20
 }
 .token-chart-cont{
-    @apply w-[60vw] flex justify-between items-center my-8
+    @apply w-[70vw] flex justify-between items-center my-16
 }
 .token-chart{
     @apply w-1/3
 }
 .token-chart-text-cont{
-    @apply w-[43%] h-[28vh] flex items-center justify-center border-red-100 rounded-xl  px-10;
+    @apply w-[43%] h-[28vh] flex flex-col justify-center border-red-100 rounded-xl  px-10;
     border-width: 1px;
 }
 .token-chart-text{
     @apply text-6xl text-white font-semibold text-center
+}
+.sampleText{
+    @apply text-3xl text-white w-fit cursor-pointer p-0
+}
+
+/* different hover appear cards */
+
+.token-chart-text-cont2{
+    @apply w-[43%] h-[28vh] flex flex-col justify-center border-white rounded-xl  pl-5 ;
+    border-width: 1px;
+}
+.token-chart-text-head-cont{
+    @apply flex items-center w-full
+}
+.token-chart-text-head-light{
+    @apply text-white text-6xl font-light mr-4
+}
+.token-chart-text-head-bold{
+    @apply text-white text-6xl font-extrabold
+}
+.token-chart-text-medium{
+    @apply text-white text-3xl font-bold mb-6
+}
+.token-chart-text-small{
+    @apply text-white text-base w-full
 }
