--- a/src/components/roadmap-sec/roadmap.css
+++ b/src/components/roadmap-sec/roadmap.css
@@ -40,7 +40,7 @@
 
 .roadmap-card{
     @apply w-[19vw] h-[19vw] bg-blue-normalBG rounded-xl flex flex-col items-center justify-center z-10 relative overflow-hidden;
-    transition: 1s;
+    transition: 1s ease-in-out;
 }
 .roadmap-card:hover{
     transform:rotateY(180deg);
@@ -48,7 +48,7 @@
 }
 .roadmap-card-text{
     @apply text-white text-5xl font-extrabold text-center z-30;
-    transition: 1s;
+    transition: 1s ease-in-out;
 }
 .roadmap-card-data{
     @apply text-white text-xl font-normal text-center z-30 w-10/12 mt-4 -scale-x-100
