--- a/src/components/buy/buyRotateBtn/buyRotateBtn.css
+++ b/src/components/buy/buyRotateBtn/buyRotateBtn.css
@@ -1,5 +1,5 @@
 .buy-rotate-btn-cont{
-    @apply absolute top-[-0.6rem] left-56;
+    @apply absolute top-[-0.6rem] left-56 z-10;
 }
 .buy-circle-text{
     @apply text-white
