--- a/src/components/home/gradientsHome/gradients.css
+++ b/src/components/home/gradientsHome/gradients.css
@@ -1,3 +1,6 @@
 .gradient-top-right{
-    /* @apply absolute right-0 bg-gradient-radial from-gold-gradDark to-gold-gradLight w-1/3 h-[30vw] */
+    @apply  absolute top-[-60%] right-[-30%] blur-3xl bg-gradient-radial rotate-90 from-gold-gradDark to-transparent w-[60%] h-[60vw] z-0
+}
+.gradient-bottom-left{
+    @apply  absolute top-[55%] left-[-10%] blur-3xl bg-gradient-radial rotate-90 from-purple-grad to-transparent w-[30%] h-[30vw] z-20
 }
