--- a/src/components/home/hero-sec/herosec.css
+++ b/src/components/home/hero-sec/herosec.css
@@ -29,7 +29,7 @@
     @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-dark to-purple-medium px-7 py-2 rounded-md
 }
 .hero-img{
-    @apply w-[30vw] h-[28vw]
+    @apply w-[30vw] h-[28vw] z-20
 }
 
 
@@ -42,7 +42,7 @@
     @apply text-white font-semibold text-2xl
 }
 .hero-start-btn-cont{
-    @apply absolute top-[-4.5rem] left-40;
+    @apply absolute top-[-4.5rem] left-40 z-20;
     /* animation: rotate 8s linear infinite; */
 }
 .hero-circle-text{
