--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .app{
   @apply w-screen flex justify-center items-center h-full bg-footerBG overflow-x-hidden;
 }
+body{
+  /* overflow-x: hidden; */
+  position: relative;
+}
 html{
   scroll-behavior: smooth;
-  @apply overflow-x-hidden
+  overflow-x: hidden;
 }
