wallet selection problem solved, minor responsiveness changes

--- a/src/components/claim/claim.css
+++ b/src/components/claim/claim.css
@@ -1,12 +1,21 @@
 .claim-hero-sec{
-    @apply w-screen flex justify-around items-start bg-footerBG relative pt-10 pb-0  
+    @apply w-screen flex flex-wrap justify-around items-start bg-footerBG relative pt-10 pb-0  
 }
 .claim-img{
-    @apply w-[30%] z-[11]
+    @apply w-[30%] z-[11] min-w-[500px]
 }
 .claim-bottom-text-cont{
     @apply flex justify-end absolute bottom-0 w-full bg-gradient-to-r from-white via-tWhite to-transparent z-10
 }
 .claim-bottom-text{
     @apply text-white text-2xl font-semibold py-4 mr-[20%] z-0
+}
+
+@media screen and (max-width: 1700px) {
+    .claim-hero-sec{
+        @apply pb-20
+    }
+    /* .claim-bottom-text-cont{
+        @apply hidden
+    } */
 }
