--- a/src/components/claim/claimInstructions/claimInstructions.css
+++ b/src/components/claim/claimInstructions/claimInstructions.css
@@ -1,8 +1,8 @@
 .claim-ins-cont{
-    @apply mr-[10%] w-[28%] py-8 border-white border-[0.5px] rounded-2xl flex flex-col items-center bg-gradient-to-r from-tWhite to-tBlack
+    @apply min-w-[400px] mr-[10%] w-[28%] py-8 border-white border-[0.5px] rounded-2xl flex flex-col items-center bg-gradient-to-r from-tWhite to-tBlack
 }
 .claim-head-cont{
-    @apply w-[90%] flex justify-between
+    @apply w-[90%] flex justify-between flex-wrap
 }
 .claim-title{
     @apply text-4xl text-white font-extrabold
