--- a/src/components/home/navbar/navbar.css
+++ b/src/components/home/navbar/navbar.css
@@ -13,7 +13,7 @@
     animation: typing 5s steps(7, end);
 }
 .nav-link-cont{
-    @apply w-1/4 flex justify-between
+    @apply w-1/4 flex justify-between min-w-[400px]
 }
 .nav-link{
     @apply text-white text-lg cursor-pointer;
