--- a/src/components/claim/buyToken/buyToken.css
+++ b/src/components/claim/buyToken/buyToken.css
@@ -1,5 +1,5 @@
 .buy-modal{
-    @apply w-1/4 bg-tBlack z-[60] absolute left-0 right-0 top-1/3 mx-auto flex py-6 flex-col items-start pl-6 rounded-lg relative;
+    @apply w-1/4 bg-tBlack z-[60] absolute left-0 right-0 top-1/3 mx-auto flex py-6 flex-col items-start pl-6 rounded-lg relative min-w-[450px];
 }
 .buy-modal-title{
     @apply text-white text-4xl font-semibold mb-3
