--- a/src/components/home/hero-sec/herosec.css
+++ b/src/components/home/hero-sec/herosec.css
@@ -1,11 +1,11 @@
 .hero-sec{
-    @apply w-screen flex flex-col items-center bg-footerBG pt-10 pb-20
+    @apply w-screen flex flex-col items-center bg-footerBG pt-10 pb-20 relative
 }
 .hero-sec-main{
     @apply w-screen flex justify-around items-center bg-footerBG 
 }
 .hero-data-cont{
-    @apply w-1/3 flex flex-col items-start
+    @apply w-1/3 flex flex-col items-start min-w-[550px]
 }
 .hero-data-heading-cont{
     @apply w-full
@@ -30,6 +30,9 @@
 }
 .hero-img{
     @apply w-[30vw] h-[28vw] z-20
+}
+.hero-img-grad{
+    @apply absolute w-[35%] h-[35vw] top-[4%] right-[6%] bg-gradient-radial from-gold-gradDark to-transparent blur-3xl animate-pulse
 }
 
 
