--- a/src/components/claim/claim.css
+++ b/src/components/claim/claim.css
@@ -1,14 +1,17 @@
 .claim-hero-sec{
-    @apply w-screen flex flex-wrap justify-around items-start bg-footerBG relative pt-10 pb-0  
+    @apply w-screen flex flex-wrap-reverse xl:flex-wrap justify-around items-start bg-footerBG relative pt-10 pb-0  
+}
+.shiba-cont{
+@apply z-[11] mt-16 xl:m-0  -mb-14
 }
 .claim-img{
-    @apply w-[30%] z-[11] min-w-[500px]
+    @apply w-[30%] z-[11] mx-auto lg:mx-0 mt-6 lg:mt-0 min-w-[360px] sm:min-w-[420px] lg:min-w-[500px] xl:min-w-[560px]
 }
 .claim-bottom-text-cont{
-    @apply flex justify-end absolute bottom-0 w-full bg-gradient-to-r from-white via-tWhite to-transparent z-10
+    @apply flex  justify-end absolute bottom-0 w-full bg-gradient-to-r from-white via-tWhite to-transparent z-10
 }
 .claim-bottom-text{
-    @apply text-white text-2xl font-semibold py-4 mr-[20%] z-0
+    @apply text-white mx-auto lg:mx-0 text-sm sm:text-xl lg:text-2xl font-semibold py-4 lg:mr-[20%] z-0
 }
 
 @media screen and (max-width: 1700px) {
