--- a/src/components/buy/buyOptions/buyOptions.css
+++ b/src/components/buy/buyOptions/buyOptions.css
@@ -1,17 +1,17 @@
 .buy-opt-cont{
-    @apply mr-[10%] w-[32%] py-8 border-white border-[0.5px] rounded-2xl flex flex-col items-center bg-gradient-to-r from-tWhite to-tBlack
+    @apply lg:mr-[10%] w-[80vw] lg:w-[32%]  border-white border-[0.5px] rounded-2xl flex flex-col items-center bg-gradient-to-r from-tWhite to-tBlack
 }
 .buy-title{
-    @apply text-4xl text-white font-extrabold
+    @apply mt-5 text-2xl lg:text-3xl xl:text-4xl text-white font-extrabold
 }
 .buy-title-light{
-    @apply text-4xl text-white font-extralight my-6
+    @apply text-2xl lg:text-3xl xl:text-4xl text-white font-extralight my-3 lg:my-6
 }
 .buy-btn-cont{
-    @apply grid grid-cols-100 w-[90%] gap-5 my-10
+    @apply grid grid-cols-3 lg:grid-cols-100 w-[90%] gap-3 lg:gap-5 my-10  mt-24 lg:mt-10
 }
 .buy-opt-btn{
-    @apply flex items-center justify-center px-6 py-3 bg-gradient-to-br from-purple-medium to-purple-dark rounded-xl h-16
+    @apply flex items-center justify-center  px-6 py-4 lg:py-3 bg-gradient-to-br from-purple-medium to-purple-dark rounded-xl lg:h-16
 }
 .buy-opt-icon{
     @apply w-20 
