--- a/src/components/claim/claimInstructions/claimInstructions.css
+++ b/src/components/claim/claimInstructions/claimInstructions.css
@@ -1,14 +1,14 @@
 .claim-ins-cont{
-    @apply min-w-[400px] mr-[10%] w-[28%] py-8 border-white border-[0.5px] rounded-2xl flex flex-col items-center bg-gradient-to-r from-tWhite to-tBlack
+    @apply  min-w-[320px]  sm:min-w-[400px] mx-auto sm:mx-0 xl:mr-[10%] w-[28%] py-8  border-white border-[0.5px] rounded-2xl flex flex-col items-center bg-gradient-to-r from-tWhite to-tBlack
 }
 .claim-head-cont{
     @apply w-[90%] flex justify-between flex-wrap
 }
 .claim-title{
-    @apply text-4xl text-white font-extrabold
+    @apply text-2xl lg:text-4xl text-white font-extrabold
 }
 .claim-title2{
-    @apply text-4xl text-white font-extralight
+    @apply text-2xl lg:text-4xl text-white font-extralight
 }
 .claim-small-text-cont{
     @apply w-[90%] flex justify-between my-8 items-end
@@ -17,13 +17,13 @@
     @apply text-sm text-white
 }
 .claim-small-line{
-    @apply w-[80%] bg-white h-[1px] 
+    @apply w-[70%] lg:w-[80%] bg-white h-[1px] 
 }
 .claim-ins-div{
     @apply flex flex-col w-[90%] items-start my-8
 }
 .claim-ins{
-    @apply text-xl text-white font-poppins mb-4
+    @apply  text-lg lg:text-xl text-white font-poppins mb-4
 }
 .claim-connect-btn{
     @apply text-sm w-[90%] font-semibold text-white bg-gradient-to-bl from-purple-dark to-purple-medium py-4 rounded-xl
