--- a/src/components/home/hero-sec/herosec.css
+++ b/src/components/home/hero-sec/herosec.css
@@ -1,51 +1,54 @@
 .hero-sec{
-    @apply w-screen flex flex-col items-center bg-footerBG pt-10 pb-20 relative
+    @apply w-screen flex flex-col items-center bg-footerBG pt-10 sm:pb-20 relative
 }
 .hero-sec-main{
-    @apply w-screen flex justify-around items-center bg-footerBG 
+    @apply w-screen flex flex-col sm:flex-row  sm:justify-around sm:items-center bg-footerBG 
 }
 .hero-data-cont{
     @apply w-1/3 flex flex-col items-start min-w-[550px]
 }
 .hero-data-heading-cont{
-    @apply w-full
+    @apply w-full ml-5 lg:ml-0
 }
 .hero-data-heading1{
-    @apply text-7xl text-white font-light my-6
+    @apply text-[40px] md:text-6xl  lg:text-7xl text-white font-light my-2 sm:my-6
 }
 .hero-data-heading2{
-    @apply text-7xl text-white font-extrabold my-6
+    @apply text-5xl md:text-6xl lg:text-7xl text-white font-extrabold my-2 sm:my-6
 }
 .hero-data-btn-cont{
-    @apply w-2/5 flex justify-between items-center my-6
+    @apply flex justify-between items-center ml-6 lg:ml-0 my-6
 }
 .hero-data-btn-text{
-    @apply text-2xl text-white font-semibold 
+    @apply text-lg lg:text-2xl text-white font-semibold  mr-6
 }
 .hero-data-btn{
-    @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-medium to-purple-dark px-7 py-2 rounded-md
+    @apply  text-lg sm:text-2xl text-white font-semibold bg-gradient-to-br from-purple-medium to-purple-dark px-7 py-2 rounded-md 
 }
 .hero-data-btn:hover{
     @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-dark to-purple-medium px-7 py-2 rounded-md
 }
+.hero-cont{
+   @apply z-20 px-12 mr-4 pt-12 sm:p-0
+}
 .hero-img{
-    @apply w-[30vw] h-[28vw] z-20
+    @apply  sm:w-[30vw] sm:h-[28vw]   mx-auto 
 }
 .hero-img-grad{
-    @apply absolute w-[35%] h-[35vw] top-[4%] right-[6%] bg-gradient-radial from-gold-gradDark to-transparent blur-3xl animate-pulse
+    @apply  absolute w-[35%] h-[35vw] top-[4%] right-[6%] bg-gradient-radial from-gold-gradDark to-transparent blur-3xl animate-pulse
 }
 
 
 /* circle button cont  */
 
 .hero-start-div{
-    @apply h-11 w-screen flex items-center justify-center bg-grey-light mb-20 relative
+    @apply h-11 w-screen sm:mt-16 xl:mt-0 flex items-center justify-center bg-grey-light mb-10 sm:mb-20 relative
 }
 .hero-start-text{
-    @apply text-white font-semibold text-2xl
+    @apply text-white font-semibold text-xs sm:text-xl lg:text-2xl
 }
 .hero-start-btn-cont{
-    @apply absolute top-[-4.5rem] left-40 z-20;
+    @apply hidden md:block absolute top-[-4.5rem] left-40 z-20;
     /* animation: rotate 8s linear infinite; */
 }
 .hero-circle-text{
