--- a/src/components/home/roadmap-sec/roadmap.css
+++ b/src/components/home/roadmap-sec/roadmap.css
@@ -1,23 +1,24 @@
 .roadmap-sec{
-    @apply w-screen flex flex-col items-center bg-footerBG pt-10 pb-20
+    @apply w-screen flex flex-col items-center bg-footerBG pt-10 sm:pb-20
 }
 .roadmap-text-cont{
-    @apply w-full flex justify-center my-6
+    @apply w-full flex justify-center  sm:my-6
 }
 .roadmap-text{
     @apply text-white opacity-80 text-xl text-center
 }
 .roadmap-card-cont{
-    @apply flex w-3/5 justify-between items-center mt-8 mb-20 relative
+    @apply flex flex-col sm:flex-row w-3/5 justify-between items-center mt-8 mb-20 relative
 }
-.roadmap-img{
-    @apply w-[15vw] h-[15vw] absolute left-[35%] bottom-0 z-40
+.roadmap-img {
+    @apply w-[30vw] h-[32vw] sm:w-[15vw] sm:h-[15vw] absolute left-1/2 transform -translate-x-1/2 top-[42%] transform -translate-y-1/2 z-40;
 }
+
 
 /* node tree styling */
 
 .roadmap-line-cont{
-    @apply flex items-center justify-start w-[42%]
+    @apply hidden sm:inline-flex items-center justify-start w-[42%]
 }
 .roadmap-line{
     @apply h-[1px] w-[47%] bg-purple-line 
@@ -39,7 +40,7 @@
 /* roadmap card styling */
 
 .roadmap-card{
-    @apply w-[19vw] h-[19vw] bg-blue-normalBG rounded-xl flex flex-col items-center justify-center z-10 relative overflow-hidden;
+    @apply  w-[70vw]  h-[70vw] sm:w-[30vw] sm:h-[30vw] lg:w-[19vw] lg:h-[19vw] sm:mx-4 lg:mx-0 mb-16 sm:my-0  bg-blue-normalBG rounded-xl flex flex-col items-center justify-center z-10 relative overflow-hidden border;
     transition: 1s ease-in-out;
 }
 .roadmap-card:hover{
@@ -47,17 +48,17 @@
     @apply bg-purple-light
 }
 .roadmap-card-text{
-    @apply text-white text-5xl font-extrabold text-center z-30;
+    @apply text-white text-2xl lg:text-5xl font-extrabold text-center z-30;
 }
 .roadmap-card-text2{
-    @apply text-white text-5xl font-extrabold text-center z-30 -scale-x-100;
+    @apply text-white  text-2xl lg:text-5xl font-extrabold text-center z-30 -scale-x-100;
 
 }
 .roadmap-card-data{
-    @apply text-white text-xl font-normal text-center z-30 w-10/12 mt-4 -scale-x-100
+    @apply text-white  overflow-x-auto lg:text-xl font-normal text-center z-30 w-10/12 mt-4 -scale-x-100
 }
 .roadmap-card-subtext{
-    @apply text-white text-3xl font-extrabold text-center mt-2 z-30
+    @apply text-white text-xl lg:text-3xl font-extrabold text-center mt-2 z-30
 }
 .roadmap-card-c1{
     @apply bg-blue-darkCircle w-[75%] h-[75%] rounded-full absolute bottom-[-2rem] left-[-3.4rem] z-20
