--- a/src/components/home/tokenomics-sec/tokenomics.css
+++ b/src/components/home/tokenomics-sec/tokenomics.css
@@ -1,22 +1,22 @@
 .token-sec{
-    @apply w-screen flex flex-col items-center bg-footerBG pt-10 pb-20
+    @apply  sm:p-0 w-screen flex flex-col items-center bg-footerBG sm:pt-10  sm:pb-20
 }
 .token-chart-cont{
-    @apply w-[70vw] flex justify-between items-center my-16
+    @apply  w-[70vw] flex flex-col sm:flex-row justify-between items-center my-12 sm:my-16
 }
 .token-chart{
-    @apply w-1/3
+    @apply  sm:w-1/3
 }
 .token-chart-text-cont{
-    @apply w-[43%] h-[28vh] flex flex-col justify-center border-red-100 rounded-xl  px-10;
+    @apply sm:w-[43%] p-8 mt-8 sm:mt-0 sm:p-0 sm:h-[28vh] flex flex-col justify-center border-red-100 rounded-xl  px-10;
     border-width: 1px;
     transition: 1s;
 }
 .token-chart-text{
-    @apply text-6xl text-white font-semibold text-center
+    @apply text-2xl md:text-3xl lg:text-6xl text-white font-semibold text-center
 }
 .sampleText{
-    @apply text-3xl text-white w-fit cursor-pointer p-0
+    @apply  text-xl sm:text-3xl text-white w-fit cursor-pointer p-0
 }
 
 /* different hover appear cards */
