--- a/src/components/buy/buy.css
+++ b/src/components/buy/buy.css
@@ -32,7 +32,7 @@
 
 @media screen and (max-width: 1700px) {
     .buy-hero-sec{
-        @apply pb-20
+        @apply pb-20 xl:pb-0
     }
     /* .claim-bottom-text-cont{
         @apply hidden
