--- a/src/components/claim/claim.css
+++ b/src/components/claim/claim.css
@@ -5,7 +5,7 @@
 @apply z-[11] mt-16 xl:m-0  -mb-14
 }
 .claim-img{
-    @apply w-[30%] z-[11] mx-auto lg:mx-0 mt-6 lg:mt-0 min-w-[360px] sm:min-w-[420px] lg:min-w-[500px] xl:min-w-[560px]
+    @apply w-[30%] z-[11] mx-auto lg:mx-0 mt-6 lg:mt-6 min-w-[360px] sm:min-w-[420px] lg:min-w-[500px] xl:min-w-[560px]
 }
 .claim-bottom-text-cont{
     @apply flex  justify-end absolute bottom-0 w-full bg-gradient-to-r from-white via-tWhite to-transparent z-10
@@ -19,7 +19,7 @@
 
 @media screen and (max-width: 1700px) {
     .claim-hero-sec{
-        @apply pb-20
+        @apply pb-20 xl:pb-0
     }
     /* .claim-bottom-text-cont{
         @apply hidden
