--- a/src/components/home/features-sec/features.css
+++ b/src/components/home/features-sec/features.css
@@ -5,20 +5,23 @@
     @apply text-white opacity-80 text-xl  w-[85vw] sm:w-[65vw] text-center my-4
 }
 .feature-card-cont{
-    @apply w-[90vw] sm:w-[80vw] xl:w-[60vw] flex flex-wrap justify-between my-14
+    @apply w-[90vw] sm:w-[80vw]  2xl:w-[60vw] flex flex-wrap lg:justify-between my-14 transition-all 
 }
 
 /*Feature card styling*/
 
 .feature-card{
-    @apply mx-auto mb-10 lg:m-0 fill-transparent flex justify-center items-center w-[43%] h-[28vh] sm:h-[30vh] bg-gradient-to-r from-[#6033c4] to-[#6033c4] sm:from-brown-light sm:to-brown-dark rounded-2xl relative z-10 overflow-hidden min-w-[95%] sm:min-w-[400px] border;
+    @apply mx-auto  mb-10 lg:m-0 fill-transparent flex justify-center items-center w-[43%] h-[28vh] sm:h-[30vh] bg-gradient-to-r from-[#6033c4] to-[#6033c4] sm:from-brown-light sm:to-brown-dark rounded-2xl relative overflow-hidden min-w-[95%] sm:min-w-[400px] border  transition-all duration-200 ease-out transform hover:scale-105
 }
 .feature-card-text{
-    @apply text-white text-center text-xl sm:text-4xl font-extrabold leading-[3rem] w-4/5 z-20 
+    @apply text-white text-center text-2xl  lg:text-3xl 2xl:text-4xl font-extrabold leading-[3rem] w-4/5 z-20 
 }
 .feature-card-text-short{
-    @apply text-white text-center text-xl sm:text-4xl font-extrabold leading-[3rem] w-1/3 z-20
+    @apply text-white text-center text-2xl  lg:text-3xl 2xl:text-4xl  font-extrabold leading-[3rem] w-1/3 z-20
 }
+
+
+
 .feature-card-cd{
     @apply bg-[#3f217e] sm:bg-brown-dark w-52 h-52 rounded-full absolute transition-transform; 
     transition:1s
@@ -40,7 +43,7 @@
     @apply bottom-[-3.5rem] left-[-2rem];
 }
 .feature-card-data{
-    @apply sm:text-xl font-normal text-white w-4/5 text-center z-30 ;
+    @apply sm:text-lg font-normal text-white w-4/5 text-center z-30 ;
 }
 
 /* animations */
