--- a/src/components/home/footer/footer.css
+++ b/src/components/home/footer/footer.css
@@ -1,5 +1,5 @@
 .footer-sec{
-    @apply w-screen bg-footerBG flex flex-col sm:flex-row flex-wrap justify-evenly pt-10 pb-14 pr-28 z-40 relative border-t
+    @apply w-screen bg-footerBG flex flex-col sm:flex-row flex-wrap justify-evenly pt-10 pb-14  z-40 relative border-t
 }
 .footer-about{
     @apply sm:w-1/4 
@@ -8,17 +8,18 @@
     @apply w-screen text-center sm:w-full sm:text-start text-3xl text-white font-bold mb-3
 }
 .footer-about-text{
-    @apply px-5 sm:px-0 text-white text-center sm:text-start text-base opacity-40 font-normal
+    @apply px-5 sm:px-0 text-white text-center sm:text-start text-sm md:text-base lg:text-lg opacity-40 font-normal
 }
 .footer-column-cont{
-    @apply flex mt-12 sm:mt-0 px-6 sm:px-0 lg:flex-wrap  sm:w-2/5 sm:justify-between
+    @apply flex mt-12 sm:mt-0 px-6 sm:px-0 lg:flex-wrap  sm:w-2/5 sm:justify-between justify-center text-start sm:mr-20 md:mr-0
+
 }
 .footer-col{
-    @apply flex flex-col items-start mr-4
+    @apply flex flex-col items-start mx-2 sm:mx-5
 }
 .footer-col-head{
     @apply font-black text-white text-xl mb-3
 }
 .footer-col-link{
-    @apply no-underline text-white opacity-40 text-base font-bold my-1.5
+    @apply no-underline text-white opacity-40  font-bold my-1.5 text-sm md:text-base lg:text-lg
 }
