--- a/src/components/home/hero-sec/herosec.css
+++ b/src/components/home/hero-sec/herosec.css
@@ -1,11 +1,11 @@
 .hero-sec{
-    @apply w-screen flex flex-col items-center bg-footerBG pt-10 sm:pb-20 relative
+    @apply w-screen flex flex-col items-center bg-footerBG pt-0 sm:pb-20 relative
 }
 .hero-sec-main{
-    @apply w-screen flex flex-col sm:flex-row  sm:justify-around sm:items-center bg-footerBG 
+    @apply w-screen flex flex-col sm:flex-row  sm:justify-around sm:items-center bg-footerBG  px-2
 }
 .hero-data-cont{
-    @apply w-1/3 flex flex-col items-start min-w-[550px]
+    @apply w-1/3 flex flex-col items-start min-w-[400px] md:min-w-[500px] lg:min-w-[550px]
 }
 .hero-data-heading-cont{
     @apply w-full ml-5 lg:ml-0
@@ -29,10 +29,10 @@
     @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-dark to-purple-medium px-7 py-2 rounded-md
 }
 .hero-cont{
-   @apply z-20 px-12 mr-4 pt-12 sm:p-0
+   @apply z-20 px-12 mr-4 pt-12 md:mt-24 xl:mt-0 sm:p-0  
 }
 .hero-img{
-    @apply  sm:w-[30vw] sm:h-[28vw]   mx-auto 
+    @apply  sm:w-[40vw] sm:h-[40vw] 2xl:w-[35vw] 2xl:h-[35vw]  mx-auto 
 }
 .hero-img-grad{
     @apply  absolute w-[35%] h-[35vw] top-[4%] right-[6%] bg-gradient-radial from-gold-gradDark to-transparent blur-3xl animate-pulse
@@ -42,13 +42,13 @@
 /* circle button cont  */
 
 .hero-start-div{
-    @apply h-11 w-screen sm:mt-16 xl:mt-0 flex items-center justify-center bg-grey-light mb-10 sm:mb-20 relative
+    @apply h-11 w-screen sm:mt-0 xl:mt-0 flex items-center justify-center md:justify-end xl:justify-center bg-grey-light mb-10 sm:mb-20 relative transition-all
 }
 .hero-start-text{
-    @apply text-white font-semibold text-xs sm:text-xl lg:text-2xl
+    @apply text-white font-semibold text-xs sm:text-xl lg:text-2xl  md:mr-5 xl:-mr-20
 }
 .hero-start-btn-cont{
-    @apply hidden md:block absolute top-[-4.5rem] left-40 z-20;
+    @apply hidden md:block absolute top-[-4.5rem] left-10 lg:left-40 z-20;
     /* animation: rotate 8s linear infinite; */
 }
 .hero-circle-text{
