--- a/src/components/home/navbar/navbar.css
+++ b/src/components/home/navbar/navbar.css
@@ -1,5 +1,5 @@
 .navbar{
-    @apply mt-6 sm:mt-10 px-6  w-screen flex justify-between sm:justify-around items-center bg-footerBG sm:pt-10 pb-20 
+    @apply mt-6 sm:mt-8 px-6 md:px-0  w-screen flex justify-between sm:justify-around items-center bg-footerBG sm:pt-10 pb-20 
 }
 .nav-title-cont{
     @apply flex justify-start
@@ -9,11 +9,11 @@
     animation: flicker 0.5s ;
 } */
 .nav-title{
-    @apply text-xl sm:text-3xl text-white font-bold overflow-hidden z-10;
+    @apply text-xl  sm:text-2xl md:text-3xl text-white font-bold overflow-hidden z-10 cursor-pointer;
     animation: typing 5s steps(7, end);
 }
 .nav-link-cont {
-    @apply hidden sm:w-1/4 sm:flex sm:justify-between sm:min-w-[360px] lg:min-w-[400px];
+    @apply hidden sm:w-1/4 sm:flex sm:justify-between sm:min-w-[360px] md:min-w-[400px] px-2;
 }
 
 .nav-link{
