--- a/src/components/home/tokenomics-sec/tokenomics.css
+++ b/src/components/home/tokenomics-sec/tokenomics.css
@@ -2,18 +2,18 @@
     @apply  sm:p-0 w-screen flex flex-col items-center bg-footerBG sm:pt-10  sm:pb-20
 }
 .token-chart-cont{
-    @apply  w-[70vw] flex flex-col sm:flex-row justify-between items-center my-12 sm:my-16
+    @apply md:w-[70vw] flex px-10 md:px-0 flex-col sm:flex-row justify-between items-center my-12 sm:my-16
 }
 .token-chart{
-    @apply w-1/3  relative
+    @apply w-2/4 sm:w-1/3  relative
 }
 .token-chart-text-cont{
-    @apply sm:w-[43%] p-8 mt-8 sm:mt-0 sm:p-0 sm:h-[28vh] flex flex-col justify-center border-red-100 rounded-xl  px-10;
+    @apply sm:w-[50%] m-2 p-8 mt-8 sm:mt-0 sm:p-8 py-8  flex flex-col justify-center border-red-100 rounded-xl  px-10  ;
     border-width: 1px;
     transition: 1s;
 }
 .token-chart-text{
-    @apply text-2xl md:text-3xl lg:text-6xl text-white font-semibold text-center
+    @apply text-2xl p-2 md:text-3xl xl:text-5xl 2xl:text-5xl text-white font-semibold text-center 
 }
 .sampleText{
     @apply  text-xl sm:text-3xl text-white w-fit cursor-pointer p-0
@@ -22,7 +22,7 @@
 /* different hover appear cards */
 
 .token-chart-text-cont2{
-    @apply w-[43%] h-[32vh] flex flex-col justify-center border-white rounded-xl  pl-5 pt-5;
+    @apply sm:w-[43%] flex flex-col justify-center border-white rounded-xl mt-8 p-4 px-8 py-10 pt-10 ;
     border-width: 1px;
     transition: 1s;
 }
@@ -30,14 +30,14 @@
     @apply flex items-center w-full
 }
 .token-chart-text-head-light{
-    @apply text-white text-6xl font-light mr-4
+    @apply text-white text-2xl sm:text-3xl md:text-4xl xl:text-6xl font-light mr-2 lg:mr-4
 }
 .token-chart-text-head-bold{
-    @apply text-white text-6xl font-extrabold
+    @apply text-white text-xl sm:text-3xl md:text-4xl xl:text-6xl font-extrabold
 }
 .token-chart-text-medium{
-    @apply text-white text-3xl font-bold mb-6
+    @apply text-white md:text-xl xl:text-3xl font-bold mb-6
 }
 .token-chart-text-small{
-    @apply text-white text-base w-full
+    @apply text-white text-sm md:text-base w-full 
 }
