--- a/src/components/home/hero-sec/herosec.css
+++ b/src/components/home/hero-sec/herosec.css
@@ -2,22 +2,72 @@
     @apply w-screen flex flex-col items-center bg-footerBG pt-0 sm:pb-20 relative
 }
 .hero-sec-main{
-    @apply w-screen flex flex-col sm:flex-row  sm:justify-around sm:items-center bg-footerBG  px-2
+    @apply w-screen flex flex-col sm:flex-row  sm:justify-around sm:items-center bg-footerBG  px-2 -mt-10
 }
+
+.hero-buyNow-mainCont{
+    @apply xl:w-full hidden xl:block  text-white z-20 
+}
+
+.hero-buyNow-cont{
+    @apply   w-[288px]  bg-[#302943]   p-5 text-center mx-auto rounded-3xl border 
+}
+
+.hero-BuyNow-heading{
+    @apply text-xl
+}
+.hero-BuyNow-heading2{
+    @apply text-2xl my-5
+}
+
+.hero-buyNow-Details-cont h3{
+    @apply text-xl
+}
+
+.hero-buyNow-Details-cont h1{
+    @apply text-3xl
+}
+
+.AirdropToken-Cont{
+    @apply border rounded-lg p-2 my-3 text-right
+}
+
+
+.hero-buyNow-Details-cont h2{
+    @apply text-2xl
+}
+
+.nav-buy-btn{
+    @apply rounded-xl text-white text-base font-semibold bg-gradient-to-br from-purple-medium to-purple-dark py-3 px-9 sm:px-11 mb-3 mt-1 
+}
+.nav-buy-btn:hover{
+    @apply rounded-xl text-white text-base font-semibold bg-gradient-to-br from-purple-dark to-purple-medium py-3 px-11 shadow-md shadow-purple-900
+}
+
+.hero-buyNow-Footer-cont{
+    @apply text-center text-sm mb-5
+}
+
+
 .hero-data-cont{
-    @apply w-1/3 flex flex-col items-start min-w-[400px] md:min-w-[500px] lg:min-w-[550px]
+    @apply w-1/3  flex flex-col items-start min-w-[400px] md:min-w-[500px]  xl:text-center  xl:m-auto
 }
 .hero-data-heading-cont{
     @apply w-full ml-5 lg:ml-0
 }
 .hero-data-heading1{
-    @apply text-[40px] md:text-6xl  lg:text-7xl text-white font-light my-2 sm:my-6
+    @apply text-[40px] md:text-6xl   text-white font-light my-2 sm:my-6
 }
 .hero-data-heading2{
     @apply text-5xl md:text-6xl lg:text-7xl text-white font-extrabold my-2 sm:my-6
 }
+
+.hero-data-heading2 span{
+    @apply xl:text-9xl 
+}
+
 .hero-data-btn-cont{
-    @apply flex justify-between items-center ml-6 lg:ml-0 my-6
+    @apply block xl:hidden flex justify-between items-center ml-6 lg:ml-0 my-6
 }
 .hero-data-btn-text{
     @apply text-lg lg:text-2xl text-white font-semibold  mr-6
@@ -29,10 +79,10 @@
     @apply text-2xl text-white font-semibold bg-gradient-to-br from-purple-dark to-purple-medium px-7 py-2 rounded-md
 }
 .hero-cont{
-   @apply z-20 px-12 mr-4 pt-12 md:mt-24 xl:mt-0 sm:p-0  
+   @apply z-20 px-12 xl:w-full pt-12 md:mt-24 xl:mt-0 sm:p-0  
 }
 .hero-img{
-    @apply  sm:w-[40vw] sm:h-[40vw] 2xl:w-[35vw] 2xl:h-[35vw]  mx-auto 
+    @apply sm:w-[40vw] sm:h-[40vw] 2xl:w-[35vw] 2xl:h-[35vw]  mx-auto  
 }
 .hero-img-grad{
     @apply  absolute w-[35%] h-[35vw] top-[4%] right-[6%] bg-gradient-radial from-gold-gradDark to-transparent blur-3xl animate-pulse
